--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="main">
-        <div class="box box1" onclick="windows.location.href='https://www.instagram.com/shivansh.tw6/'"></div>
+        <div class="box box1" onclick="windows.location.href='https://www.instagram.com/shivansh.tw6?igsh=MTAyZDFkZGJrMzUwag=='"></div>
         <div class="box box2" onclick="window.location.href='https://www.linkedin.com/in/shivansh00000'"></div>
         <div class="box box3" onclick="window.location.href='https://x.com'"></div>
         <div class="box box4" onclick="window.location.href ='mailto:shivanshgupta2607@outlook.com'"></div>
